--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark14</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>App created with vanilla JS which calculates Profit and Loss on Stocks App which takes 3 inputs from user and then displays the amount & percentage of Profit gained or Loss incured in amount(absolute value) & in percentage</p>
                 <a class="link link-primary" href="https://mark-14-profit-and-loss-calculator.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-14-Stocks-Profit-and-Loss" target="_blank">View Source Code</a>
             </li>
@@ -52,7 +52,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark13</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>Fun app made with vanilla js which tell whether your birthday is palindrome or not and also tells you the next upcoming palindrome date in case you missed</p>
                 <a class="link link-primary" href="https://mark13-birthday-palindrome.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-13-Palindrome-Birthday" target="_blank">View Source Code</a>
             </li>
@@ -64,7 +64,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark12</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>app made using vanilla js containing 3 different applications and a Quiz on Trianlges</p>
                 <a class="link link-primary" href="https://mark12-triangles-website.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-12-fun-with-triangles" target="_blank">View Source Code</a>
             </li>
@@ -76,7 +76,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark11</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>A Fun app made using vanilla js which tells whether your birthday is lucky or note according to your birthday and lucky date</p>
                 <a class="link link-primary" href="https://mark11-lucky-birthday.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-11-is-your-birthday-lucky" target="_blank">View Source Code</a>
             </li>
@@ -87,7 +87,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark10</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>App made with vanilla js which helps the merchant by telling him to return cash in minimum number of notes to Customer(in Dark Theme).</p>
                 <a class="link link-primary" href="https://mark10-cash-register-dark-theme.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-10-cash-register-app" target="_blank">View Source Code</a>
             </li>
@@ -98,7 +98,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark9</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p></p>
                 <a class="link link-primary" href="https://lp19t.csb.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://codesandbox.io/s/mark9-react-app-lp19t" target="_blank">View Source Code</a>
             </li>
@@ -109,7 +109,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark8</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>An app made with react which tells us the meaning of emojis</p>
                 <a class="link link-primary" href="https://yfsmh.csb.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://codesandbox.io/s/emojipedia-in-react-yfsmh?file=/src/App.js" target="_blank">View Source Code</a>
             </li>
@@ -120,7 +120,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark7</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>Fun translations app which translates to the language of Pirates for better Communication with them.</p>
                 <a class="link link-primary" href="https://mark7-pirates-translation-app.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-7-pirates-translation-app" target="_blank">View Source Code</a>
             </li>
@@ -131,7 +131,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark6</strong>
-                <p>This is my simplistic and lite Portfolio website made by using <strong>HTML & CSS</strong>. You can share this to anyone recommending my skills for a Web Developer role.</p>
+                <p>Fun translations app which translates to Minion language</p>
                 <a class="link link-primary" href="https://mark6-minion-speaks.netlify.app" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-6-minion-speaks" target="_blank">View Source Code</a>
             </li>
