--- a/blogs.html
+++ b/blogs.html
@@ -44,6 +44,19 @@
 
             </li>
         </div>
+        <div class="container container-center margin-md">
+            <li>
+                <h1>Data Engineering Project for CoVid-19 using Azure ADF</h1>
+                <small>June, 2021</small>
+                <br>
+                <strong>#mark5</strong>
+                <p>The project shows Population Data, Testing Done till the available Date, Hospital admissions, No. of active cases, Total No. of cases & Deaths. I will be improving upon this project by adding more countries to it with credible data sources
+                    that I can find for the above-given Parameters & will be adding! more parameter of “No. of People vaccinated till date”. If you guys know such sources please comment below & do leave your reviews. It was fun creating a fully automated
+                    ETL Task as well as creating Data pipelines on azure and visualizing them on PowerBI.</p>
+                <a target="_blank" class="link link-primary" href="https://blackhacker1998.medium.com/project-data-engineering-with-azure-data-factory-weekend-project-on-covid-19-89628514c9cc">Read Blog</a>
+
+            </li>
+        </div>
     </ul>
 
     <footer class="footer margin-tp">
