--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs | YashMalhotra.Dev</title>
+    <title>Blogs | Dev.YashMalhotra</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="/style.css" rel="stylesheet" />
 </head>
@@ -13,7 +13,7 @@
 <body>
     <nav class="navigation container">
 
-        <div class="nav-brand">YashMalhotra.Dev</div>
+        <div class="nav-brand">Dev.YashMalhotra</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/index.html">Home</a>
@@ -33,14 +33,12 @@
     <ul class="list-non-bullet">
         <div class="container container-center margin-md">
             <li>
-                <h1>Data Engineering Project for CoVid-19 using Azure ADF</h1>
-                <small>June, 2021</small>
+                <h1>Is the "random" function really Random? </h1>
+                <small>September, 2021</small>
                 <br>
-                <strong>#mark5</strong>
-                <p>The project shows Population Data, Testing Done till the available Date, Hospital admissions, No. of active cases, Total No. of cases & Deaths. I will be improving upon this project by adding more countries to it with credible data sources
-                    that I can find for the above-given Parameters & will be adding! more parameter of “No. of People vaccinated till date”. If you guys know such sources please comment below & do leave your reviews. It was fun creating a fully automated
-                    ETL Task as well as creating Data pipelines on azure and visualizing them on PowerBI.</p>
-                <a target="_blank" class="link link-primary" href="https://blackhacker1998.medium.com/project-data-engineering-with-azure-data-factory-weekend-project-on-covid-19-89628514c9cc">Read Blog</a>
+                <strong>#mark15</strong>
+                <p>My take on the basic idea of how the random function works in programming. Pseudo-random, & true-random results.</p>
+                <a target="_blank" class="link link-primary" href="https://blackhacker1998.medium.com/is-the-random-function-in-many-programming-languages-really-random-6a2458247aee">Read Blog</a>
 
             </li>
         </div>
