--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I am familiar with HTML5, CSS3, Git & Github, Javascript, NodeJs, ReactJs & Web Hosting Python, SQL, Azure.</p>
+            <p>I am familiar with HTML5, CSS3, Git & Github, Javascript, NodeJs, ReactJs,Python, SQL, Azure & Web Hosting.</p>
         </div>
     </section>
 
