--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | YashMalhotra.Dev</title>
+    <title>Projects | Dev.YashMalhotra</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="/style.css" rel="stylesheet" />
 </head>
@@ -14,7 +14,7 @@
 
     <nav class="navigation container">
 
-        <div class="nav-brand">YashMalhotra</div>
+        <div class="nav-brand">Dev.YashMalhotra</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/index.html">Home</a>
@@ -98,7 +98,7 @@
                 <small>September, 2021</small>
                 <br>
                 <strong>#mark9</strong>
-                <p></p>
+                <p>A basic spotify clone app using React consisting of my favourite songs from different genres that I like.</p>
                 <a class="link link-primary" href="https://lp19t.csb.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://codesandbox.io/s/mark9-react-app-lp19t" target="_blank">View Source Code</a>
             </li>
