--- a/blogs.html
+++ b/blogs.html
@@ -47,7 +47,7 @@
                 <h1>Data Engineering Project for CoVid-19 using Azure ADF</h1>
                 <small>June, 2021</small>
                 <br>
-                <strong>#mark5</strong>
+                <strong>#mark5, #mark15</strong>
                 <p>The project shows Population Data, Testing Done till the available Date, Hospital admissions, No. of active cases, Total No. of cases & Deaths. I will be improving upon this project by adding more countries to it with credible data sources
                     that I can find for the above-given Parameters & will be adding! more parameter of “No. of People vaccinated till date”. If you guys know such sources please comment below & do leave your reviews. It was fun creating a fully automated
                     ETL Task as well as creating Data pipelines on azure and visualizing them on PowerBI.</p>
