--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
                 <br>
                 <strong>#mark9</strong>
                 <p>A basic spotify clone app using React consisting of my favourite songs from different genres that I like.</p>
-                <a class="link link-primary" href="qtrw9.csb.app/" target="_blank">Live Project</a>
+                <a class="link link-primary" href="https://qtrw9.csb.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Yashmalhotra98/mark-9-mySpotify" target="_blank">View Source Code</a>
             </li>
         </div>
